src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> casa
Rule 1     casa -> HOUSE ID LBRACKET lh RBRACKET SEMICOLON
Rule 2     casa -> HOUSE ID LBRACKET lh lp RBRACKET SEMICOLON
Rule 3     casa -> HOUSE ID LBRACKET lh lsg RBRACKET SEMICOLON
Rule 4     casa -> HOUSE ID LBRACKET lh lag RBRACKET SEMICOLON
Rule 5     casa -> HOUSE ID LBRACKET lh lp lsg RBRACKET SEMICOLON
Rule 6     casa -> HOUSE ID LBRACKET lh lp lag RBRACKET SEMICOLON
Rule 7     casa -> HOUSE ID LBRACKET lh lsg lag RBRACKET SEMICOLON
Rule 8     casa -> HOUSE ID LBRACKET lh lp lsg lag RBRACKET SEMICOLON
Rule 9     lh -> h COMMA lh
Rule 10    lh -> h SEMICOLON
Rule 11    lp -> p COMMA lp
Rule 12    lp -> p SEMICOLON
Rule 13    h -> ROOM ID LBRACKET lsl RBRACKET
Rule 14    h -> ROOM ID LBRACKET lal RBRACKET
Rule 15    h -> ROOM ID LBRACKET c RBRACKET
Rule 16    h -> ROOM ID LBRACKET lsl lal RBRACKET
Rule 17    h -> ROOM ID LBRACKET lsl c RBRACKET
Rule 18    h -> ROOM ID LBRACKET lal c RBRACKET
Rule 19    h -> ROOM ID LBRACKET lsl lal c RBRACKET
Rule 20    h -> ROOM ID LBRACKET RBRACKET
Rule 21    p -> CORRIDOR ID LBRACKET l2id lsl RBRACKET
Rule 22    p -> CORRIDOR ID LBRACKET l2id lal RBRACKET
Rule 23    p -> CORRIDOR ID LBRACKET l2id c RBRACKET
Rule 24    p -> CORRIDOR ID LBRACKET l2id lsl lal RBRACKET
Rule 25    p -> CORRIDOR ID LBRACKET l2id lsl c RBRACKET
Rule 26    p -> CORRIDOR ID LBRACKET l2id lal c RBRACKET
Rule 27    p -> CORRIDOR ID LBRACKET l2id lsl lal c RBRACKET
Rule 28    p -> CORRIDOR ID LBRACKET l2id RBRACKET
Rule 29    l2id -> ID COMMA l2id
Rule 30    l2id -> ID COMMA ID SEMICOLON
Rule 31    lsl -> s COMMA lsl
Rule 32    lsl -> s SEMICOLON
Rule 33    lal -> a COMMA lal
Rule 34    lal -> a SEMICOLON
Rule 35    lsg -> GLOBAL LBRACKET lsg1
Rule 36    lsg1 -> s COMMA lsg1
Rule 37    lsg1 -> s RBRACKET SEMICOLON
Rule 38    lag -> GLOBAL LBRACKET lag1
Rule 39    lag1 -> a COMMA lag1
Rule 40    lag1 -> a RBRACKET SEMICOLON
Rule 41    s -> spresencia
Rule 42    s -> slluvia
Rule 43    s -> siluminacion
Rule 44    s -> sreloj
Rule 45    s -> stemperatura
Rule 46    s -> shumo
Rule 47    s -> sviento
Rule 48    s -> sintrusos
Rule 49    s -> sgas
Rule 50    s -> sinundacion
Rule 51    a -> apuerta
Rule 52    a -> acalefaccion
Rule 53    a -> apersiana
Rule 54    a -> aluz
Rule 55    a -> aventana
Rule 56    a -> afrio
Rule 57    a -> agas
Rule 58    a -> atoldo
Rule 59    a -> aalarma
Rule 60    a -> aemergencia
Rule 61    c -> LBRACKET lest SEMICOLON init SEMICOLON trans RBRACKET SEMICOLON
Rule 62    c -> LBRACKET lest SEMICOLON trans RBRACKET SEMICOLON
Rule 63    c -> LBRACKET lest SEMICOLON init SEMICOLON RBRACKET SEMICOLON
Rule 64    c -> LBRACKET lest SEMICOLON RBRACKET SEMICOLON
Rule 65    lest -> STATE ID LBRACKET lactions RBRACKET COMMA lest
Rule 66    lest -> STATE ID LBRACKET RBRACKET COMMA lest
Rule 67    lest -> STATE ID LBRACKET lactions RBRACKET
Rule 68    lest -> STATE ID LBRACKET RBRACKET
Rule 69    lactions -> action COMMA lactions
Rule 70    lactions -> action SEMICOLON
Rule 71    action -> ID SEQ BOOL
Rule 72    init -> INIT ID
Rule 73    trans -> t trans
Rule 74    trans -> t
Rule 75    t -> ID COMMA ID COMMA COMBINATION SEMICOLON
Rule 76    spresencia -> SPRESENCIA ID SEQ BOOL
Rule 77    slluvia -> SLLUVIA ID SEQ BOOL
Rule 78    siluminacion -> SILUMINACION OPL DOUBLE ID SEQ DOUBLE
Rule 79    stemperatura -> STEMPERATURA OPL DOUBLE ID SEQ DOUBLE
Rule 80    sreloj -> SRELOJ OPL TIME ID SEQ TIME
Rule 81    shumo -> SHUMO ID SEQ BOOL
Rule 82    sviento -> SVIENTO OPL DOUBLE ID SEQ DOUBLE
Rule 83    sintrusos -> SINTRUSOS ID SEQ BOOL
Rule 84    sinundacion -> SINUNDACION ID SEQ BOOL
Rule 85    sgas -> SGAS ID SEQ BOOL
Rule 86    apuerta -> APUERTA ID
Rule 87    acalefaccion -> ACALEFACCION ID
Rule 88    apersiana -> APERSIANA ID
Rule 89    aluz -> ALUZ ID
Rule 90    aventana -> AVENTANA ID
Rule 91    afrio -> AFRIO ID
Rule 92    agas -> AGAS ID
Rule 93    atoldo -> ATOLDO ID
Rule 94    aalarma -> AALARMA ID
Rule 95    aemergencia -> AEMERGENCIA ID

Terminals, with rules where they appear

AALARMA              : 94
ACALEFACCION         : 87
AEMERGENCIA          : 95
AFRIO                : 91
AGAS                 : 92
ALUZ                 : 89
APERSIANA            : 88
APUERTA              : 86
ATOLDO               : 93
AVENTANA             : 90
BOOL                 : 71 76 77 81 83 84 85
COMBINATION          : 75
COMMA                : 9 11 29 30 31 33 36 39 65 66 69 75 75
CORRIDOR             : 21 22 23 24 25 26 27 28
DOUBLE               : 78 78 79 79 82 82
GLOBAL               : 35 38
HOUSE                : 1 2 3 4 5 6 7 8
ID                   : 1 2 3 4 5 6 7 8 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 30 65 66 67 68 71 72 75 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
INIT                 : 72
LBRACKET             : 1 2 3 4 5 6 7 8 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 35 38 61 62 63 64 65 66 67 68
OPL                  : 78 79 80 82
RBRACKET             : 1 2 3 4 5 6 7 8 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 37 40 61 62 63 64 65 66 67 68
ROOM                 : 13 14 15 16 17 18 19 20
SEMICOLON            : 1 2 3 4 5 6 7 8 10 12 30 32 34 37 40 61 61 61 62 62 63 63 63 64 64 70 75
SEQ                  : 71 76 77 78 79 80 81 82 83 84 85
SGAS                 : 85
SHUMO                : 81
SILUMINACION         : 78
SINTRUSOS            : 83
SINUNDACION          : 84
SLLUVIA              : 77
SPRESENCIA           : 76
SRELOJ               : 80
STATE                : 65 66 67 68
STEMPERATURA         : 79
SVIENTO              : 82
TIME                 : 80 80
error                : 

Nonterminals, with rules where they appear

a                    : 33 34 39 40
aalarma              : 59
acalefaccion         : 52
action               : 69 70
aemergencia          : 60
afrio                : 56
agas                 : 57
aluz                 : 54
apersiana            : 53
apuerta              : 51
atoldo               : 58
aventana             : 55
c                    : 15 17 18 19 23 25 26 27
casa                 : 0
h                    : 9 10
init                 : 61 63
l2id                 : 21 22 23 24 25 26 27 28 29
lactions             : 65 67 69
lag                  : 4 6 7 8
lag1                 : 38 39
lal                  : 14 16 18 19 22 24 26 27 33
lest                 : 61 62 63 64 65 66
lh                   : 1 2 3 4 5 6 7 8 9
lp                   : 2 5 6 8 11
lsg                  : 3 5 7 8
lsg1                 : 35 36
lsl                  : 13 16 17 19 21 24 25 27 31
p                    : 11 12
s                    : 31 32 36 37
sgas                 : 49
shumo                : 46
siluminacion         : 43
sintrusos            : 48
sinundacion          : 50
slluvia              : 42
spresencia           : 41
sreloj               : 44
stemperatura         : 45
sviento              : 47
t                    : 73 74
trans                : 61 62 73

Parsing method: LALR

state 0

    (0) S' -> . casa
    (1) casa -> . HOUSE ID LBRACKET lh RBRACKET SEMICOLON
    (2) casa -> . HOUSE ID LBRACKET lh lp RBRACKET SEMICOLON
    (3) casa -> . HOUSE ID LBRACKET lh lsg RBRACKET SEMICOLON
    (4) casa -> . HOUSE ID LBRACKET lh lag RBRACKET SEMICOLON
    (5) casa -> . HOUSE ID LBRACKET lh lp lsg RBRACKET SEMICOLON
    (6) casa -> . HOUSE ID LBRACKET lh lp lag RBRACKET SEMICOLON
    (7) casa -> . HOUSE ID LBRACKET lh lsg lag RBRACKET SEMICOLON
    (8) casa -> . HOUSE ID LBRACKET lh lp lsg lag RBRACKET SEMICOLON

    HOUSE           shift and go to state 2

    casa                           shift and go to state 1

state 1

    (0) S' -> casa .



state 2

    (1) casa -> HOUSE . ID LBRACKET lh RBRACKET SEMICOLON
    (2) casa -> HOUSE . ID LBRACKET lh lp RBRACKET SEMICOLON
    (3) casa -> HOUSE . ID LBRACKET lh lsg RBRACKET SEMICOLON
    (4) casa -> HOUSE . ID LBRACKET lh lag RBRACKET SEMICOLON
    (5) casa -> HOUSE . ID LBRACKET lh lp lsg RBRACKET SEMICOLON
    (6) casa -> HOUSE . ID LBRACKET lh lp lag RBRACKET SEMICOLON
    (7) casa -> HOUSE . ID LBRACKET lh lsg lag RBRACKET SEMICOLON
    (8) casa -> HOUSE . ID LBRACKET lh lp lsg lag RBRACKET SEMICOLON

    ID              shift and go to state 3


state 3

    (1) casa -> HOUSE ID . LBRACKET lh RBRACKET SEMICOLON
    (2) casa -> HOUSE ID . LBRACKET lh lp RBRACKET SEMICOLON
    (3) casa -> HOUSE ID . LBRACKET lh lsg RBRACKET SEMICOLON
    (4) casa -> HOUSE ID . LBRACKET lh lag RBRACKET SEMICOLON
    (5) casa -> HOUSE ID . LBRACKET lh lp lsg RBRACKET SEMICOLON
    (6) casa -> HOUSE ID . LBRACKET lh lp lag RBRACKET SEMICOLON
    (7) casa -> HOUSE ID . LBRACKET lh lsg lag RBRACKET SEMICOLON
    (8) casa -> HOUSE ID . LBRACKET lh lp lsg lag RBRACKET SEMICOLON

    LBRACKET        shift and go to state 4


state 4

    (1) casa -> HOUSE ID LBRACKET . lh RBRACKET SEMICOLON
    (2) casa -> HOUSE ID LBRACKET . lh lp RBRACKET SEMICOLON
    (3) casa -> HOUSE ID LBRACKET . lh lsg RBRACKET SEMICOLON
    (4) casa -> HOUSE ID LBRACKET . lh lag RBRACKET SEMICOLON
    (5) casa -> HOUSE ID LBRACKET . lh lp lsg RBRACKET SEMICOLON
    (6) casa -> HOUSE ID LBRACKET . lh lp lag RBRACKET SEMICOLON
    (7) casa -> HOUSE ID LBRACKET . lh lsg lag RBRACKET SEMICOLON
    (8) casa -> HOUSE ID LBRACKET . lh lp lsg lag RBRACKET SEMICOLON
    (9) lh -> . h COMMA lh
    (10) lh -> . h SEMICOLON
    (13) h -> . ROOM ID LBRACKET lsl RBRACKET
    (14) h -> . ROOM ID LBRACKET lal RBRACKET
    (15) h -> . ROOM ID LBRACKET c RBRACKET
    (16) h -> . ROOM ID LBRACKET lsl lal RBRACKET
    (17) h -> . ROOM ID LBRACKET lsl c RBRACKET
    (18) h -> . ROOM ID LBRACKET lal c RBRACKET
    (19) h -> . ROOM ID LBRACKET lsl lal c RBRACKET
    (20) h -> . ROOM ID LBRACKET RBRACKET

    ROOM            shift and go to state 7

    lh                             shift and go to state 5
    h                              shift and go to state 6

state 5

    (1) casa -> HOUSE ID LBRACKET lh . RBRACKET SEMICOLON
    (2) casa -> HOUSE ID LBRACKET lh . lp RBRACKET SEMICOLON
    (3) casa -> HOUSE ID LBRACKET lh . lsg RBRACKET SEMICOLON
    (4) casa -> HOUSE ID LBRACKET lh . lag RBRACKET SEMICOLON
    (5) casa -> HOUSE ID LBRACKET lh . lp lsg RBRACKET SEMICOLON
    (6) casa -> HOUSE ID LBRACKET lh . lp lag RBRACKET SEMICOLON
    (7) casa -> HOUSE ID LBRACKET lh . lsg lag RBRACKET SEMICOLON
    (8) casa -> HOUSE ID LBRACKET lh . lp lsg lag RBRACKET SEMICOLON
    (11) lp -> . p COMMA lp
    (12) lp -> . p SEMICOLON
    (35) lsg -> . GLOBAL LBRACKET lsg1
    (38) lag -> . GLOBAL LBRACKET lag1
    (21) p -> . CORRIDOR ID LBRACKET l2id lsl RBRACKET
    (22) p -> . CORRIDOR ID LBRACKET l2id lal RBRACKET
    (23) p -> . CORRIDOR ID LBRACKET l2id c RBRACKET
    (24) p -> . CORRIDOR ID LBRACKET l2id lsl lal RBRACKET
    (25) p -> . CORRIDOR ID LBRACKET l2id lsl c RBRACKET
    (26) p -> . CORRIDOR ID LBRACKET l2id lal c RBRACKET
    (27) p -> . CORRIDOR ID LBRACKET l2id lsl lal c RBRACKET
    (28) p -> . CORRIDOR ID LBRACKET l2id RBRACKET

    RBRACKET        shift and go to state 8
    GLOBAL          shift and go to state 13
    CORRIDOR        shift and go to state 14

    lp                             shift and go to state 9
    lsg                            shift and go to state 10
    lag                            shift and go to state 11
    p                              shift and go to state 12

state 6

    (9) lh -> h . COMMA lh
    (10) lh -> h . SEMICOLON

    COMMA           shift and go to state 15
    SEMICOLON       shift and go to state 16


state 7

    (13) h -> ROOM . ID LBRACKET lsl RBRACKET
    (14) h -> ROOM . ID LBRACKET lal RBRACKET
    (15) h -> ROOM . ID LBRACKET c RBRACKET
    (16) h -> ROOM . ID LBRACKET lsl lal RBRACKET
    (17) h -> ROOM . ID LBRACKET lsl c RBRACKET
    (18) h -> ROOM . ID LBRACKET lal c RBRACKET
    (19) h -> ROOM . ID LBRACKET lsl lal c RBRACKET
    (20) h -> ROOM . ID LBRACKET RBRACKET

    ID              shift and go to state 17


state 8

    (1) casa -> HOUSE ID LBRACKET lh RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 18


state 9

    (2) casa -> HOUSE ID LBRACKET lh lp . RBRACKET SEMICOLON
    (5) casa -> HOUSE ID LBRACKET lh lp . lsg RBRACKET SEMICOLON
    (6) casa -> HOUSE ID LBRACKET lh lp . lag RBRACKET SEMICOLON
    (8) casa -> HOUSE ID LBRACKET lh lp . lsg lag RBRACKET SEMICOLON
    (35) lsg -> . GLOBAL LBRACKET lsg1
    (38) lag -> . GLOBAL LBRACKET lag1

    RBRACKET        shift and go to state 19
    GLOBAL          shift and go to state 13

    lsg                            shift and go to state 20
    lag                            shift and go to state 21

state 10

    (3) casa -> HOUSE ID LBRACKET lh lsg . RBRACKET SEMICOLON
    (7) casa -> HOUSE ID LBRACKET lh lsg . lag RBRACKET SEMICOLON
    (38) lag -> . GLOBAL LBRACKET lag1

    RBRACKET        shift and go to state 22
    GLOBAL          shift and go to state 24

    lag                            shift and go to state 23

state 11

    (4) casa -> HOUSE ID LBRACKET lh lag . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 25


state 12

    (11) lp -> p . COMMA lp
    (12) lp -> p . SEMICOLON

    COMMA           shift and go to state 26
    SEMICOLON       shift and go to state 27


state 13

    (35) lsg -> GLOBAL . LBRACKET lsg1
    (38) lag -> GLOBAL . LBRACKET lag1

    LBRACKET        shift and go to state 28


state 14

    (21) p -> CORRIDOR . ID LBRACKET l2id lsl RBRACKET
    (22) p -> CORRIDOR . ID LBRACKET l2id lal RBRACKET
    (23) p -> CORRIDOR . ID LBRACKET l2id c RBRACKET
    (24) p -> CORRIDOR . ID LBRACKET l2id lsl lal RBRACKET
    (25) p -> CORRIDOR . ID LBRACKET l2id lsl c RBRACKET
    (26) p -> CORRIDOR . ID LBRACKET l2id lal c RBRACKET
    (27) p -> CORRIDOR . ID LBRACKET l2id lsl lal c RBRACKET
    (28) p -> CORRIDOR . ID LBRACKET l2id RBRACKET

    ID              shift and go to state 29


state 15

    (9) lh -> h COMMA . lh
    (9) lh -> . h COMMA lh
    (10) lh -> . h SEMICOLON
    (13) h -> . ROOM ID LBRACKET lsl RBRACKET
    (14) h -> . ROOM ID LBRACKET lal RBRACKET
    (15) h -> . ROOM ID LBRACKET c RBRACKET
    (16) h -> . ROOM ID LBRACKET lsl lal RBRACKET
    (17) h -> . ROOM ID LBRACKET lsl c RBRACKET
    (18) h -> . ROOM ID LBRACKET lal c RBRACKET
    (19) h -> . ROOM ID LBRACKET lsl lal c RBRACKET
    (20) h -> . ROOM ID LBRACKET RBRACKET

    ROOM            shift and go to state 7

    h                              shift and go to state 6
    lh                             shift and go to state 30

state 16

    (10) lh -> h SEMICOLON .

    RBRACKET        reduce using rule 10 (lh -> h SEMICOLON .)
    GLOBAL          reduce using rule 10 (lh -> h SEMICOLON .)
    CORRIDOR        reduce using rule 10 (lh -> h SEMICOLON .)


state 17

    (13) h -> ROOM ID . LBRACKET lsl RBRACKET
    (14) h -> ROOM ID . LBRACKET lal RBRACKET
    (15) h -> ROOM ID . LBRACKET c RBRACKET
    (16) h -> ROOM ID . LBRACKET lsl lal RBRACKET
    (17) h -> ROOM ID . LBRACKET lsl c RBRACKET
    (18) h -> ROOM ID . LBRACKET lal c RBRACKET
    (19) h -> ROOM ID . LBRACKET lsl lal c RBRACKET
    (20) h -> ROOM ID . LBRACKET RBRACKET

    LBRACKET        shift and go to state 31


state 18

    (1) casa -> HOUSE ID LBRACKET lh RBRACKET SEMICOLON .

    $end            reduce using rule 1 (casa -> HOUSE ID LBRACKET lh RBRACKET SEMICOLON .)


state 19

    (2) casa -> HOUSE ID LBRACKET lh lp RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 32


state 20

    (5) casa -> HOUSE ID LBRACKET lh lp lsg . RBRACKET SEMICOLON
    (8) casa -> HOUSE ID LBRACKET lh lp lsg . lag RBRACKET SEMICOLON
    (38) lag -> . GLOBAL LBRACKET lag1

    RBRACKET        shift and go to state 33
    GLOBAL          shift and go to state 24

    lag                            shift and go to state 34

state 21

    (6) casa -> HOUSE ID LBRACKET lh lp lag . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 35


state 22

    (3) casa -> HOUSE ID LBRACKET lh lsg RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 36


state 23

    (7) casa -> HOUSE ID LBRACKET lh lsg lag . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 37


state 24

    (38) lag -> GLOBAL . LBRACKET lag1

    LBRACKET        shift and go to state 38


state 25

    (4) casa -> HOUSE ID LBRACKET lh lag RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 39


state 26

    (11) lp -> p COMMA . lp
    (11) lp -> . p COMMA lp
    (12) lp -> . p SEMICOLON
    (21) p -> . CORRIDOR ID LBRACKET l2id lsl RBRACKET
    (22) p -> . CORRIDOR ID LBRACKET l2id lal RBRACKET
    (23) p -> . CORRIDOR ID LBRACKET l2id c RBRACKET
    (24) p -> . CORRIDOR ID LBRACKET l2id lsl lal RBRACKET
    (25) p -> . CORRIDOR ID LBRACKET l2id lsl c RBRACKET
    (26) p -> . CORRIDOR ID LBRACKET l2id lal c RBRACKET
    (27) p -> . CORRIDOR ID LBRACKET l2id lsl lal c RBRACKET
    (28) p -> . CORRIDOR ID LBRACKET l2id RBRACKET

    CORRIDOR        shift and go to state 14

    p                              shift and go to state 12
    lp                             shift and go to state 40

state 27

    (12) lp -> p SEMICOLON .

    RBRACKET        reduce using rule 12 (lp -> p SEMICOLON .)
    GLOBAL          reduce using rule 12 (lp -> p SEMICOLON .)


state 28

    (35) lsg -> GLOBAL LBRACKET . lsg1
    (38) lag -> GLOBAL LBRACKET . lag1
    (36) lsg1 -> . s COMMA lsg1
    (37) lsg1 -> . s RBRACKET SEMICOLON
    (39) lag1 -> . a COMMA lag1
    (40) lag1 -> . a RBRACKET SEMICOLON
    (41) s -> . spresencia
    (42) s -> . slluvia
    (43) s -> . siluminacion
    (44) s -> . sreloj
    (45) s -> . stemperatura
    (46) s -> . shumo
    (47) s -> . sviento
    (48) s -> . sintrusos
    (49) s -> . sgas
    (50) s -> . sinundacion
    (51) a -> . apuerta
    (52) a -> . acalefaccion
    (53) a -> . apersiana
    (54) a -> . aluz
    (55) a -> . aventana
    (56) a -> . afrio
    (57) a -> . agas
    (58) a -> . atoldo
    (59) a -> . aalarma
    (60) a -> . aemergencia
    (76) spresencia -> . SPRESENCIA ID SEQ BOOL
    (77) slluvia -> . SLLUVIA ID SEQ BOOL
    (78) siluminacion -> . SILUMINACION OPL DOUBLE ID SEQ DOUBLE
    (80) sreloj -> . SRELOJ OPL TIME ID SEQ TIME
    (79) stemperatura -> . STEMPERATURA OPL DOUBLE ID SEQ DOUBLE
    (81) shumo -> . SHUMO ID SEQ BOOL
    (82) sviento -> . SVIENTO OPL DOUBLE ID SEQ DOUBLE
    (83) sintrusos -> . SINTRUSOS ID SEQ BOOL
    (85) sgas -> . SGAS ID SEQ BOOL
    (84) sinundacion -> . SINUNDACION ID SEQ BOOL
    (86) apuerta -> . APUERTA ID
    (87) acalefaccion -> . ACALEFACCION ID
    (88) apersiana -> . APERSIANA ID
    (89) aluz -> . ALUZ ID
    (90) aventana -> . AVENTANA ID
    (91) afrio -> . AFRIO ID
    (92) agas -> . AGAS ID
    (93) atoldo -> . ATOLDO ID
    (94) aalarma -> . AALARMA ID
    (95) aemergencia -> . AEMERGENCIA ID

    SPRESENCIA      shift and go to state 65
    SLLUVIA         shift and go to state 66
    SILUMINACION    shift and go to state 67
    SRELOJ          shift and go to state 68
    STEMPERATURA    shift and go to state 69
    SHUMO           shift and go to state 70
    SVIENTO         shift and go to state 71
    SINTRUSOS       shift and go to state 72
    SGAS            shift and go to state 73
    SINUNDACION     shift and go to state 74
    APUERTA         shift and go to state 75
    ACALEFACCION    shift and go to state 76
    APERSIANA       shift and go to state 77
    ALUZ            shift and go to state 78
    AVENTANA        shift and go to state 79
    AFRIO           shift and go to state 80
    AGAS            shift and go to state 81
    ATOLDO          shift and go to state 82
    AALARMA         shift and go to state 83
    AEMERGENCIA     shift and go to state 84

    lsg1                           shift and go to state 41
    lag1                           shift and go to state 42
    s                              shift and go to state 43
    a                              shift and go to state 44
    spresencia                     shift and go to state 45
    slluvia                        shift and go to state 46
    siluminacion                   shift and go to state 47
    sreloj                         shift and go to state 48
    stemperatura                   shift and go to state 49
    shumo                          shift and go to state 50
    sviento                        shift and go to state 51
    sintrusos                      shift and go to state 52
    sgas                           shift and go to state 53
    sinundacion                    shift and go to state 54
    apuerta                        shift and go to state 55
    acalefaccion                   shift and go to state 56
    apersiana                      shift and go to state 57
    aluz                           shift and go to state 58
    aventana                       shift and go to state 59
    afrio                          shift and go to state 60
    agas                           shift and go to state 61
    atoldo                         shift and go to state 62
    aalarma                        shift and go to state 63
    aemergencia                    shift and go to state 64

state 29

    (21) p -> CORRIDOR ID . LBRACKET l2id lsl RBRACKET
    (22) p -> CORRIDOR ID . LBRACKET l2id lal RBRACKET
    (23) p -> CORRIDOR ID . LBRACKET l2id c RBRACKET
    (24) p -> CORRIDOR ID . LBRACKET l2id lsl lal RBRACKET
    (25) p -> CORRIDOR ID . LBRACKET l2id lsl c RBRACKET
    (26) p -> CORRIDOR ID . LBRACKET l2id lal c RBRACKET
    (27) p -> CORRIDOR ID . LBRACKET l2id lsl lal c RBRACKET
    (28) p -> CORRIDOR ID . LBRACKET l2id RBRACKET

    LBRACKET        shift and go to state 85


state 30

    (9) lh -> h COMMA lh .

    RBRACKET        reduce using rule 9 (lh -> h COMMA lh .)
    GLOBAL          reduce using rule 9 (lh -> h COMMA lh .)
    CORRIDOR        reduce using rule 9 (lh -> h COMMA lh .)


state 31

    (13) h -> ROOM ID LBRACKET . lsl RBRACKET
    (14) h -> ROOM ID LBRACKET . lal RBRACKET
    (15) h -> ROOM ID LBRACKET . c RBRACKET
    (16) h -> ROOM ID LBRACKET . lsl lal RBRACKET
    (17) h -> ROOM ID LBRACKET . lsl c RBRACKET
    (18) h -> ROOM ID LBRACKET . lal c RBRACKET
    (19) h -> ROOM ID LBRACKET . lsl lal c RBRACKET
    (20) h -> ROOM ID LBRACKET . RBRACKET
    (31) lsl -> . s COMMA lsl
    (32) lsl -> . s SEMICOLON
    (33) lal -> . a COMMA lal
    (34) lal -> . a SEMICOLON
    (61) c -> . LBRACKET lest SEMICOLON init SEMICOLON trans RBRACKET SEMICOLON
    (62) c -> . LBRACKET lest SEMICOLON trans RBRACKET SEMICOLON
    (63) c -> . LBRACKET lest SEMICOLON init SEMICOLON RBRACKET SEMICOLON
    (64) c -> . LBRACKET lest SEMICOLON RBRACKET SEMICOLON
    (41) s -> . spresencia
    (42) s -> . slluvia
    (43) s -> . siluminacion
    (44) s -> . sreloj
    (45) s -> . stemperatura
    (46) s -> . shumo
    (47) s -> . sviento
    (48) s -> . sintrusos
    (49) s -> . sgas
    (50) s -> . sinundacion
    (51) a -> . apuerta
    (52) a -> . acalefaccion
    (53) a -> . apersiana
    (54) a -> . aluz
    (55) a -> . aventana
    (56) a -> . afrio
    (57) a -> . agas
    (58) a -> . atoldo
    (59) a -> . aalarma
    (60) a -> . aemergencia
    (76) spresencia -> . SPRESENCIA ID SEQ BOOL
    (77) slluvia -> . SLLUVIA ID SEQ BOOL
    (78) siluminacion -> . SILUMINACION OPL DOUBLE ID SEQ DOUBLE
    (80) sreloj -> . SRELOJ OPL TIME ID SEQ TIME
    (79) stemperatura -> . STEMPERATURA OPL DOUBLE ID SEQ DOUBLE
    (81) shumo -> . SHUMO ID SEQ BOOL
    (82) sviento -> . SVIENTO OPL DOUBLE ID SEQ DOUBLE
    (83) sintrusos -> . SINTRUSOS ID SEQ BOOL
    (85) sgas -> . SGAS ID SEQ BOOL
    (84) sinundacion -> . SINUNDACION ID SEQ BOOL
    (86) apuerta -> . APUERTA ID
    (87) acalefaccion -> . ACALEFACCION ID
    (88) apersiana -> . APERSIANA ID
    (89) aluz -> . ALUZ ID
    (90) aventana -> . AVENTANA ID
    (91) afrio -> . AFRIO ID
    (92) agas -> . AGAS ID
    (93) atoldo -> . ATOLDO ID
    (94) aalarma -> . AALARMA ID
    (95) aemergencia -> . AEMERGENCIA ID

    RBRACKET        shift and go to state 88
    LBRACKET        shift and go to state 86
    SPRESENCIA      shift and go to state 65
    SLLUVIA         shift and go to state 66
    SILUMINACION    shift and go to state 67
    SRELOJ          shift and go to state 68
    STEMPERATURA    shift and go to state 69
    SHUMO           shift and go to state 70
    SVIENTO         shift and go to state 71
    SINTRUSOS       shift and go to state 72
    SGAS            shift and go to state 73
    SINUNDACION     shift and go to state 74
    APUERTA         shift and go to state 75
    ACALEFACCION    shift and go to state 76
    APERSIANA       shift and go to state 77
    ALUZ            shift and go to state 78
    AVENTANA        shift and go to state 79
    AFRIO           shift and go to state 80
    AGAS            shift and go to state 81
    ATOLDO          shift and go to state 82
    AALARMA         shift and go to state 83
    AEMERGENCIA     shift and go to state 84

    lsl                            shift and go to state 87
    lal                            shift and go to state 89
    c                              shift and go to state 90
    s                              shift and go to state 91
    a                              shift and go to state 92
    spresencia                     shift and go to state 45
    slluvia                        shift and go to state 46
    siluminacion                   shift and go to state 47
    sreloj                         shift and go to state 48
    stemperatura                   shift and go to state 49
    shumo                          shift and go to state 50
    sviento                        shift and go to state 51
    sintrusos                      shift and go to state 52
    sgas                           shift and go to state 53
    sinundacion                    shift and go to state 54
    apuerta                        shift and go to state 55
    acalefaccion                   shift and go to state 56
    apersiana                      shift and go to state 57
    aluz                           shift and go to state 58
    aventana                       shift and go to state 59
    afrio                          shift and go to state 60
    agas                           shift and go to state 61
    atoldo                         shift and go to state 62
    aalarma                        shift and go to state 63
    aemergencia                    shift and go to state 64

state 32

    (2) casa -> HOUSE ID LBRACKET lh lp RBRACKET SEMICOLON .

    $end            reduce using rule 2 (casa -> HOUSE ID LBRACKET lh lp RBRACKET SEMICOLON .)


state 33

    (5) casa -> HOUSE ID LBRACKET lh lp lsg RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 93


state 34

    (8) casa -> HOUSE ID LBRACKET lh lp lsg lag . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 94


state 35

    (6) casa -> HOUSE ID LBRACKET lh lp lag RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 95


state 36

    (3) casa -> HOUSE ID LBRACKET lh lsg RBRACKET SEMICOLON .

    $end            reduce using rule 3 (casa -> HOUSE ID LBRACKET lh lsg RBRACKET SEMICOLON .)


state 37

    (7) casa -> HOUSE ID LBRACKET lh lsg lag RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 96


state 38

    (38) lag -> GLOBAL LBRACKET . lag1
    (39) lag1 -> . a COMMA lag1
    (40) lag1 -> . a RBRACKET SEMICOLON
    (51) a -> . apuerta
    (52) a -> . acalefaccion
    (53) a -> . apersiana
    (54) a -> . aluz
    (55) a -> . aventana
    (56) a -> . afrio
    (57) a -> . agas
    (58) a -> . atoldo
    (59) a -> . aalarma
    (60) a -> . aemergencia
    (86) apuerta -> . APUERTA ID
    (87) acalefaccion -> . ACALEFACCION ID
    (88) apersiana -> . APERSIANA ID
    (89) aluz -> . ALUZ ID
    (90) aventana -> . AVENTANA ID
    (91) afrio -> . AFRIO ID
    (92) agas -> . AGAS ID
    (93) atoldo -> . ATOLDO ID
    (94) aalarma -> . AALARMA ID
    (95) aemergencia -> . AEMERGENCIA ID

    APUERTA         shift and go to state 75
    ACALEFACCION    shift and go to state 76
    APERSIANA       shift and go to state 77
    ALUZ            shift and go to state 78
    AVENTANA        shift and go to state 79
    AFRIO           shift and go to state 80
    AGAS            shift and go to state 81
    ATOLDO          shift and go to state 82
    AALARMA         shift and go to state 83
    AEMERGENCIA     shift and go to state 84
